--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
   <link rel="manifest" href="/assets/favicons/site.webmanifest">
 
+  <!-- Font Imports -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+
   <!-- Open Graphs -->
 
+
   <!-- CSS Links -->
+  <link rel="stylesheet" href="./src/generate.css" />
 
   <!-- JavaScript Links -->
+  <script type="module" src="./src/generate.js"></script>
   
   <title>Advice generator app</title>
 </head>
