--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
 
     <!-- Open Graphs -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://generate-advices4me.netlify.app/"/>
+    <meta
+      property="og:url"
+      content="https://generate-advices4me.netlify.app/"
+    />
     <meta property="og:title" content="Advice Generator" />
     <meta
       property="og:description"
@@ -45,21 +48,35 @@
     />
 
     <!-- Open Graph Image  -->
-    <meta property="og:image" content="https://generate-advices4me.netlify.app/design/opengraph_image.jpg" />
-    <meta property="og:image:secure_url" content="https://generate-advices4me.netlify.app/assets/design/opengraph_image.jpg" />
-    <meta property="og:image:type" content="image/jpeg"/>
-    <meta property="og:image:alt" content="Illustration of the advice generator app"/>
+    <meta
+      property="og:image"
+      content="https://generate-advices4me.netlify.app/design/opengraph_image.jpg"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="https://generate-advices4me.netlify.app/assets/design/opengraph_image.jpg"
+    />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta
+      property="og:image:alt"
+      content="Illustration of the advice generator app"
+    />
     <meta property="og:image:width" content="1285" />
     <meta property="og:image:height" content="708" />
 
     <!-- X Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@stephenikuomola" />
-    <meta name="twitter:creator" content="@stephenikuomola"/>
+    <meta name="twitter:creator" content="@stephenikuomola" />
     <meta name="twitter:title" content="Advice Generator" />
-    <meta name="twitter:description" content="Advice generator app that provides random advice with just a click of a button."/>
-    <meta name="twitter:image" content="https://generate-advices4me.netlify.app/assets/design/opengraph_image.jpg">
-  
+    <meta
+      name="twitter:description"
+      content="Advice generator app that provides random advice with just a click of a button."
+    />
+    <meta
+      name="twitter:image"
+      content="https://generate-advices4me.netlify.app/assets/design/opengraph_image.jpg"
+    />
 
     <!-- CSS Links -->
     <link rel="stylesheet" href="./src/generate.css" />
