modify(core):add button type to html file

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             src="/assets/images/pattern-divider-mobile.svg"
           />
         </picture>
-        <button class="btn" aria-label="Click to generate new advice" disabled>
+        <button type="button" class="btn" aria-label="Click to generate new advice" disabled>
           <img
             alt=""
             aria-hidden="true"
